build.log
  DESCEND bpf/resolve_btfids
  DESCEND objtool
  INSTALL libsubcmd_headers
  CALL    scripts/checksyscalls.sh
  INSTALL libsubcmd_headers
  CC      drivers/watchdog/watchdog_core.o
  CC      drivers/watchdog/watchdog_dev.o
  CC      drivers/thermal/intel/intel_hfi.o
  CC [M]  drivers/thermal/intel/intel_powerclamp.o
  CC      drivers/md/md.o
  CC      drivers/md/md-bitmap.o
drivers/thermal/intel/intel_hfi.c: In function ‘get_hfi_caps’:
drivers/thermal/intel/intel_hfi.c:186:47: error: invalid use of undefined type ‘struct hfi_cpu_data’
  186 |                 cpu_caps[i].performance = caps->perf_cap << 2;
      |                                               ^~
drivers/thermal/intel/intel_hfi.c:187:46: error: invalid use of undefined type ‘struct hfi_cpu_data’
  187 |                 cpu_caps[i].efficiency = caps->ee_cap << 2;
      |                                              ^~
make[5]: *** [scripts/Makefile.build:289: drivers/thermal/intel/intel_hfi.o] Error 1
make[5]: *** Waiting for unfinished jobs....
make[4]: *** [scripts/Makefile.build:546: drivers/thermal/intel] Error 2
make[3]: *** [scripts/Makefile.build:546: drivers/thermal] Error 2
make[3]: *** Waiting for unfinished jobs....
  CC      drivers/watchdog/watchdog_pretimeout.o
  CC      drivers/md/md-llbitmap.o
  CC      drivers/watchdog/pretimeout_noop.o
  CC [M]  drivers/watchdog/pretimeout_panic.o
  CC      drivers/md/md-autodetect.o
  CC [M]  drivers/watchdog/pcwd_pci.o
  CC      drivers/md/dm-init.o
  CC [M]  drivers/watchdog/wdt_pci.o
  CC [M]  drivers/watchdog/pcwd_usb.o
  CC [M]  drivers/watchdog/cadence_wdt.o
  CC      drivers/md/dm-uevent.o
  CC [M]  drivers/watchdog/twl4030_wdt.o
  CC      drivers/md/dm-zone.o
  CC      drivers/md/dm-ima.o
  CC      drivers/md/dm-audit.o
  CC [M]  drivers/watchdog/dw_wdt.o
  CC      drivers/md/dm.o
  CC [M]  drivers/watchdog/retu_wdt.o
  CC [M]  drivers/watchdog/acquirewdt.o
  CC      drivers/md/dm-table.o
  CC [M]  drivers/watchdog/advantechwdt.o
  CC [M]  drivers/watchdog/advantech_ec_wdt.o
  CC [M]  drivers/watchdog/alim1535_wdt.o
  CC      drivers/md/dm-target.o
  CC [M]  drivers/watchdog/alim7101_wdt.o
  CC [M]  drivers/watchdog/cgbc_wdt.o
  CC      drivers/md/dm-linear.o
  CC      drivers/md/dm-stripe.o
  CC [M]  drivers/watchdog/ebc-c384_wdt.o
  CC [M]  drivers/watchdog/exar_wdt.o
  CC      drivers/md/dm-ioctl.o
  CC      drivers/md/dm-io.o
  CC [M]  drivers/watchdog/f71808e_wdt.o
  CC      drivers/md/dm-kcopyd.o
  CC      drivers/md/dm-sysfs.o
  CC      drivers/md/dm-stats.o
  CC [M]  drivers/watchdog/sp5100_tco.o
  CC [M]  drivers/watchdog/sbc_fitpc2_wdt.o
  CC [M]  drivers/watchdog/eurotechwdt.o
